--- a/index.html
+++ b/index.html
@@ -104,32 +104,68 @@
                 <button class="btn text-[#1DD100] border-2 border-[#1DD100]">See All Offers</button>
             </div>
         </section>
-        <section>
-            <div>
-                <h1>P.H Paribahan</h1>
-                <p>Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
-                <div>
-                    <!-- 1st -->
-                    <div>
-                        <div>
+
+        <!-- p.h paribahan -->
+    <section class="mt-20">
+            <h1 class="text-center text-black font-bold text-4xl">P.H Paribahan</h1>
+            <p class="text-center mt-5 mb-12">Yes, you can run unit tests and view the results directly within the app. The integrated <br> testing features allow for a streamlined .</p>
+        <div class=" ">
+              
+            <div class="lg:flex justify-between w-11/12 mx-auto items-center  ">
+                <!-- 1st -->
+                 <div class=" lg:w-2/3 ">
+                    <div class="flex justify-between ">
+                        <div class="flex gap-3 mb-5">
                             <div>
                                 <img src="images/bus-logo.png" alt="">
                             </div>
                             <div>
-
+                                <h1 class="text-2xl font-bold">Greenline Paribahan</h1>
+                                <p>Coach-009-WEB ! AC_Business</p>
                             </div>
                         </div>
-                        <div>
-
+                        <div class="flex items-center p-3 rounded-lg text-[#1DD100]
+                         gap-3 mb-5 bg-[#1DD10026]">
+                            <div>
+                                <img src="images/seat-green.png" alt="">
+                            </div>
+                            <div>
+                                <p>40 Seats left</p>
+                            </div>
                         </div>
                     </div>
-                    <!-- 2nd -->
-                    <div>
-
+                   <div class="bg-[#F7F8F8] p-4 rounded-lg ">
+                    <div class="flex justify-between mb-5">
+                        <p>Route</p>
+                        <h1 class="font-medium text-lg">Dhaka - Sylhet</h1>
                     </div>
+                    <hr>
+                    <br>
+                    <div class="flex justify-between mb-5 items-center">
+                        <p>Departure Time</p>
+                        <h1 class="font-medium text-lg">9:00 PM</h1>
+                    </div>
+                    <hr>
+                    <br>
+                    <div class="flex justify-between ">
+                        <h1 class="bg-[#1DD10026] items-center p-3 rounded-lg">Boarding Point - Laxmipur</h1>
+                        <h1 class="bg-[#1DD10026] items-center p-3 rounded-lg">Dropping Point - Bogura</h1>
+                        <h1 class="bg-[#1DD10026] items-center p-3 rounded-lg">Est. Time - 11 Hour</h1>
+                    </div>
+                   </div>
                 </div>
+
+
+                    <!-- 2nd -->
+                    <div class="ml-40">
+                        <img src="images/fare.png" alt="">
+                        <h1 class="font-bold text-xl">550 Taka</h1>
+                        <p>Per Seat</p>
+                    </div>
             </div>
-        </section>
+
+        </div>
+    </section>
         
     </main>
 
