--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="flex flex-col justify-center items-center h-full">
                 <h1 class="text-white text-6xl lg:w-[742px] font-extrabold max-w-screen-md text-center lg:leading-[86px]">End-to-End Travel with  <span class="text-[#1DD100]">PH Paribahan</span></h1>
                 <p class="text-white text-[16px] max-w-lg text-center leading-[30px]">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
-                <button class="btn bg-[#1DD100] mt-5"><a class="text-white" href="click-here">Buy Tickets</a></button>
+                <button class="btn bg-[#1DD100] mt-5"><a class="text-white" href="#click-here">Buy Tickets</a></button>
             </div>
             </div>
         </div>
@@ -130,7 +130,7 @@
                                 <img src="images/seat-green.png" alt="">
                             </div>
                             <div class="left-parent">
-                                <p class=""><span class="left">8 </span>Seats left</p>
+                                <p class=""><span id="dicress" class="left bg-[#1DD100] p-1 rounded-full text-white"> 8 </span> <span class="pl-1"> Seats left</span></p>
                             </div>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
     </section>
 
     <!-- Select Your Seat -->
-   <section">
+   <section class="click-here">
         <div class="  lg:flex justify-between mx-auto w-11/12 mt-12">
             <!-- 1-part -->
             <div class="mb-3  lg:w-3/5"> 
@@ -214,7 +214,7 @@
                             
                               <div class="flex">
                                 <div class="flex items-center justify-center">
-                                    <th>Seat <span class="upgrade bg-[#1DD100] p-1 rounded-full text-white">0</span>
+                                    <th>Seat <span id="incress" class="upgrade bg-[#1DD100] p-1 rounded-full text-white">0</span>
                                     </th>
                                   </div>
                                   <th>Class</th>
