--- a/index.html
+++ b/index.html
@@ -266,9 +266,10 @@
                       <!-- Open the modal using ID.showModal() method -->
                     <button class="btn w-full bg-[#1DD100] text-white mt-3" onclick="my_modal_2.showModal()">Next</button>
                     <dialog id="my_modal_2" class="modal">
-                      <div class="modal-box">
-                        <h3 class="font-bold text-lg">Succes!</h3>
-                        <p class="py-4"> Congratulationas !</p>
+                      <div class="modal-box flex flex-col justify-center items-center bg-white">
+                        <!-- <h3 class="font-bold text-lg">Succes!</h3>
+                        <p class="py-4"> Congratulationas !</p> -->
+                        <img class="" src="images/pture.PNG" alt="">
                       </div>
                       <form method="dialog" class="modal-backdrop">
                         <button>close</button>
