--- a/index.html
+++ b/index.html
@@ -64,9 +64,41 @@
                    <button class="btn bg-[#1DD100] mt-5"><a class="text-white" href="#click-here">Buy Tickets</a></button>
 
                 </div>
-            </div> 
+            </div>
         </div>
 
+
+        <!-- <div class="flex mx-auto absolute mb-[37rem] gap-5 justify-center">
+            <div class="flex bg-[#FFF] p-4 rounded-2xl gap-2">
+                <div>
+                    <img src="images/people.png" alt="">
+                </div>
+                <div>
+                    <h1>500K+</h1>
+                    <p>Registered users</p>
+                </div>
+            </div> 
+
+            <div class="flex bg-[#FFF] p-4 rounded-2xl gap-2 ">
+                <div>
+                    <img src="images/ticket-cupon.png" alt="">
+                </div>
+                <div>
+                    <h1>500K+</h1>
+                    <p>Registered users</p>
+                </div>
+            </div> 
+
+            <div class="flex  bg-[#FFF] p-4 rounded-2xl gap-2 ">
+                <div>
+                    <img src="images/stoppage.png" alt="">
+                </div>
+                <div>
+                    <h1>500K+</h1>
+                    <p>Registered users</p>
+                </div>
+            </div> 
+         </div> -->
         <!-- Best offers for you -->
         <section class="px-4">
             <h1 class="font-extrabold text-4xl text-center mt-24">Best offers for you</h1>
@@ -304,7 +336,18 @@
                     <img src="images/footer.svg" alt="">
                   </nav>
             </div>
+            <footer class="footer items-center p-4 bg-neutral text-neutral-content  ">
+                <aside class="items-center grid-flow-col">
+                  <p>@all rights reserved, P-Ticket services limited.2024</p>
+                </aside> 
+                <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
+                  <div>Terms & condition</div>
+                  <div>Return & refund policy</div>
+                  <div>Privacy policy</div>
+                </nav>
+              </footer>
      </footer>
+     
      <script src="js/app-1.js"></script>
      <script>
        
