--- a/index.html
+++ b/index.html
@@ -63,42 +63,41 @@
                     <p class="text-white text-[16px] max-w-lg text-center leading-[30px]">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
                    <button class="btn bg-[#1DD100] mt-5"><a class="text-white" href="#click-here">Buy Tickets</a></button>
 
+                   <div class="hidden md:hidden lg:flex mx-auto absolute mt-[37rem] gap-5 justify-center">
+                    <div class="flex bg-[#FFF] p-4 rounded-2xl gap-2 border-b border-green-500">
+                        <div>
+                            <img src="images/people.png" alt="">
+                        </div>
+                        <div>
+                            <h1 class="font-extrabold text-2xl">500K+</h1>
+                            <p>Registered users</p>
+                        </div>
+                    </div> 
+        
+                    <div class="flex bg-[#FFF] p-4 rounded-2xl gap-2 border-b border-green-500">
+                        <div>
+                            <img src="images/ticket-cupon.png" alt="">
+                        </div>
+                        <div>
+                            <h1 class="font-extrabold text-2xl">1.7 lacks</h1>
+                            <p>Tickets sold</p>
+                        </div>
+                    </div> 
+        
+                    <div class="flex  bg-[#FFF] p-4 rounded-2xl gap-2 items-center border-b border-green-500 ">
+                        <div>
+                            <img src="images/stoppage.png" alt="">
+                        </div>
+                        <div>
+                            <h1 class="font-extrabold text-2xl">80K+</h1>
+                            <p>Rental partners</p>
+                        </div>
+                    </div> 
+                 </div>
                 </div>
             </div>
         </div>
 
-
-        <!-- <div class="flex mx-auto absolute mb-[37rem] gap-5 justify-center">
-            <div class="flex bg-[#FFF] p-4 rounded-2xl gap-2">
-                <div>
-                    <img src="images/people.png" alt="">
-                </div>
-                <div>
-                    <h1>500K+</h1>
-                    <p>Registered users</p>
-                </div>
-            </div> 
-
-            <div class="flex bg-[#FFF] p-4 rounded-2xl gap-2 ">
-                <div>
-                    <img src="images/ticket-cupon.png" alt="">
-                </div>
-                <div>
-                    <h1>500K+</h1>
-                    <p>Registered users</p>
-                </div>
-            </div> 
-
-            <div class="flex  bg-[#FFF] p-4 rounded-2xl gap-2 ">
-                <div>
-                    <img src="images/stoppage.png" alt="">
-                </div>
-                <div>
-                    <h1>500K+</h1>
-                    <p>Registered users</p>
-                </div>
-            </div> 
-         </div> -->
         <!-- Best offers for you -->
         <section class="px-4">
             <h1 class="font-extrabold text-4xl text-center mt-24">Best offers for you</h1>
