last color added

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
         </section>
 
         <!-- p.h paribahan -->
-    <section class="mt-20">
-            <h1 class="text-center text-black font-bold text-4xl">P.H Paribahan</h1>
+    <section class="mt-20 border-t-2 border-green-500 rounded-3xl">
+            <h1 class="text-center text-black font-bold text-4xl lg:mt-16">P.H Paribahan</h1>
             <p class="text-center mt-5 mb-12">Yes, you can run unit tests and view the results directly within the app. The integrated <br> testing features allow for a streamlined .</p>
         <div class=" ">
               
